Add some type aliases

--- a/UUID.ini
+++ b/UUID.ini
@@ -10,17 +10,17 @@ arg2=long
 returnType=int
 
 [compareTo]
-arg1=java.util.UUID
+arg1=self
 returnType=int
 
 [equals]
-arg1=java.lang.Object
+arg1=Object
 returnType=boolean
 
 [fromString]
 static=true
-arg1=java.lang.String
-returnType=java.util.UUID
+arg1=String
+returnType=self
 
 [getLeastSignificantBits]
 returnType=long
@@ -34,20 +34,20 @@ returnType=int
 [nameUUIDFromBytes]
 static=true
 arg1=byte[]
-returnType=java.util.UUID
+returnType=self
 
 [node]
 returnType=long
 
 [randomUUID]
 static=true
-returnType=java.util.UUID
+returnType=self
 
 [timestamp]
 returnType=long
 
 [toString]
-returnType=java.lang.String
+returnType=String
 
 [variant]
 returnType=int
