Improve android example

--- a/android/Intent.ini
+++ b/android/Intent.ini
@@ -13,3 +13,17 @@ arg2=android.net.Uri
 [setData]
 returnType=self
 arg1=android.net.Uri
+
+[addFlags]
+returnType=self
+arg1=int
+
+[ACTION_VIEW]
+field=true
+static=true
+type=String
+
+[FLAG_ACTIVITY_NEW_TASK]
+field=true
+static=true
+type=int
