Add test functions

--- a/def/ExtraTest.ini
+++ b/def/ExtraTest.ini
@@ -17,3 +17,13 @@ field=true
 type=int
 
 [doubleInt]
+
+[getIntValues]
+returnType=int[]
+
+[mathConstants]
+field=true
+type=double[]
+
+[getSqrtTwo]
+returnType=double
